fix: minor spacing issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,6 @@
 	--padding: 1rem;
 
 	width: min(var(--max-width), 100% - var(--padding) * 2);
-	margin: 0 5rem 5rem;
 	margin-inline: auto;
 }
 
