--- a/frontend/src/components/HeroSection/Hero.module.css
+++ b/frontend/src/components/HeroSection/Hero.module.css
@@ -5,7 +5,7 @@
 			rgba(0, 0, 0, 0) 93.01%
 		),
 		url("../../assets/hero-image.png") lightgray 50% / cover no-repeat;
-	padding: 15rem 5rem 10rem;
+	padding: 12rem 5rem 15rem;
 	max-height: 100vh;
 }
 
